--- a/css/content.css
+++ b/css/content.css
@@ -1,5 +1,5 @@
 /* 1.2.2. Content Pages */
-/* Content pages constitute the third level of the Undisciplining Victorian Studies site and consist of the generally text-heavy files that present individual Zoomcasts, lesson plans, syllabi, assessments, various parts of the "About" section, the sitemap, and the 404 page. Except for the last two named files, he files are found in the following directories: /html/about, /html/assessments, /html/lesson_plans, /html/syllabi, and /html/zoomcasts */
+/* Content pages constitute the third level of the Undisciplining Victorian Studies site and consist of the generally text-heavy files that present individual Zoomcasts, lesson plans, syllabi, assessments, various parts of the "About" section, the sitemap, and the 404 page. Except for the last two named files, the files are found in the following directories: /html/about, /html/assessments, /html/lesson_plans, /html/syllabi, and /html/zoomcasts */
 
 /* section-specific colors, in particular for the colored divider line at the top of content pages and menu heading background */
 /* for further section-specific color specs, see /css/cluster.css and the .current class on /css/style.css */
@@ -154,7 +154,7 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 }
 /* adds specific ratio to ratio box */
 /* commonly used ratios: 8/10 = 80 | 5/7 = 71.43 | 2/3 = 66.67 | 9/16 = 56.25 */
-/* for founding devs. and associate/assistant eds. images, use 285/356 as ratio (= 80.01) */
+/* for founding devs. and associate/assistant eds. images on the content pages, use 285/356 as ratio (= 80.01) */
 .content main .aspect-ratio-box::after {
   content: "";
   padding-bottom: 56.25%;
